# IT-school-Hello-World-tw

./: .dockerignore  .env_samle  Dockerfile  README.md  Taskfile.yml  celery_app.py  docker-compose.yml  manage.py  pyproject.toml  tt.md
nginx_conf/: default.conf
project_school/: __init__.py  apps.py  asgi.py  celery.py  celery_app.py  config.py  settings.py  urls.py  wsgi.py
project_school/middleware/: sql_counter.py
src/lesson/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
src/lesson/migrations/: 0001_initial.py  0002_lesson_student.py
src/lesson/tests/: conftest.py  test_execute.py  test_queue_basic.py  test_worker_retry.py
src/services/: notification_service.py
src/services/queue/: base_queue.py  manager.py  producer.py  status.py  worker.py
src/student/: admin.py  apps.py  models.py  urls.py  views.py
src/student/migrations/: 0001_initial.py
