[tool.poetry]
name = "school"
version = "0.1.0"
description = ""
authors = ["faiver90 <faiver90@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
django = ">=5.2.8,<6.0.0"
ruff = ">=0.14.5,<0.15.0"
mypy = ">=1.18.2,<2.0.0"
gunicorn = ">=23.0.0,<24.0.0"
uvicorn = ">=0.38.0,<0.39.0"
psycopg = {extras = ["binary"], version = "^3.2.12"}
djangorestframework = ">=3.16.1,<4.0.0"
celery = ">=5.5.3,<6.0.0"
redis = ">=7.0.1,<8.0.0"
flower = ">=2.0.1,<3.0.0"
drf-spectacular = ">=0.29.0,<0.30.0"
drf-spectacular-sidecar = ">=2025.10.1,<2026.0.0"
pydantic-settings = "^2.12.0"
pytest = "^9.0.1"
pytest-django = "^4.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project_school.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["src"]
addopts = """
    --maxfail=9999
    --disable-warnings
    -vv
    -s
    --color=yes
    --continue-on-collection-errors
"""
[dependency-groups]
dev = [
    "django-stubs (>=5.2.7,<6.0.0)",
    "djangorestframework-stubs (>=3.16.5,<4.0.0)"
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "skip"
disallow_untyped_calls = false
disallow_untyped_defs = false
check_untyped_defs = false
warn_unused_ignores = false
show_error_codes = true
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]

[tool.django-stubs]
django_settings_module = "project_school.settings"